Update V exercises, tweak language in VS def

--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -80,32 +80,33 @@
 \newcommand{\vectorSpaceProperties}{
 \begin{multicols}{2}
 \begin{itemize}
-  \item \textbf{Addition associativity.}
+  \item \textbf{Addition is associative.}
 
         \(\vect u+(\vect v+\vect w)=
         (\vect u+\vect v)+\vect w\).
-  \item \textbf{Addition commutivity.}
+  \item \textbf{Addition is commutative.}
 
         \(\vect u+\vect v=
         \vect v+\vect u\).
-  \item \textbf{Addition identity.}
+  \item \textbf{Additive identity exists.}
 
         There exists some \(\vect z\)
         where \(\vect v+\vect z=\vect v\).
-  \item \textbf{Addition inverse.}
+  \item \textbf{Additive inverses exist.}
 
         There exists some \(-\vect v\)
         where \(\vect v+(-\vect v)=\vect z\).
-  \item \textbf{Scalar multiplication associativity.}
+  \columnbreak
+  \item \textbf{Scalar multiplication is associative.}
 
         \(a(b\vect v)=(ab)\vect v\).
-  \item \textbf{Scalar multiplication identity.}
+  \item \textbf{$1$ is a scalar multiplicative identity.}
 
         \(1\vect v=\vect v\).
-  \item \textbf{Scalar distribution.}
+  \item \textbf{Scalar multiplication distributes over vector addition.}
 
         \(a(\vect u+\vect v)=a\vect u+a\vect v\).
-  \item \textbf{Vector distribution.}
+  \item \textbf{Scalar multiplication distributes over scalar addition.}
 
         \((a+b)\vect v=a\vect v+b\vect v\).
 \end{itemize}
