--- a/tex/modules/2-V/exercises/V1.tex
+++ b/tex/modules/2-V/exercises/V1.tex
@@ -1,47 +1,17 @@
 \begin{problem}{V1}
 Let $V$ be the  set of all real numbers together with the operations $\oplus$ and $\odot$ defined by, for any $x,y \in V$ and $c \in \IR$,
 \begin{align*}
-x\oplus y  &= x+y-3 \\
+x\oplus y  &= x+y \\
 c \odot x &= cx-3(c-1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that \textbf{scalar multiplication} is
-      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\).
-\item Determine if $V$ is a vector space or not.  Justify your answer
+      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\) for all scalars $a,b \in \IR$ and $x \in V$.
+\item Show that scalar multiplication does not distribute over vector addition, i.e. for some scalar $a \in \IR$ and $x,y \in V$, $a \odot (x \oplus y) \neq a \odot x \oplus a \odot y$.
 \end{enumerate}
 \end{problem}
 
 \begin{solution}
-Let $x,y \in V$, $c,d \in \IR$.
-To show associativity:
-\begin{align*}
-c\odot \left( d \odot x\right) &= c\odot \left( dx-3(d-1) \right) \\
-&= c\left(dx-3(d-1)\right)-3(c-1) \\
-&= cdx-3(cd-1) \\
-&= (cd) \odot x
-\end{align*}
-
-We verify the remaining 7 properties to see that $V$ is a vector space.
-\begin{enumerate}[1)]
-\item Real addition is associative, so $\oplus$ is associative.
-\item $x\oplus 3 = x+3-3=x$, so $3$ is the additive identity.
-\item $x \oplus (6-x) = x+(6-x)-3=3$, so $6-x$ is the additive inverse of $x$.
-\item Real addition is commutative, so $\oplus$ is commutative.
-\item Associativity shown above
-\item $1 \odot x = x-3(1-1)=x$
-\item \begin{align*} c \odot (x \oplus y) &=
-c \odot (x+y-3) \\
-&= c(x+y-3)-3(c-1) \\
-&= cx-3(c-1) + cy-3(c-1) -3 \\
-&= (c\odot x ) \oplus (c\odot y)
-\end{align*}
-\item \begin{align*} (c+d) \odot x &= (c+d)x-3(c+d-1) \\
-&= cx-3(c-1)+dx-3(c-1)-3 \\
-&= (c\odot x ) \oplus (d \odot x)
-\end{align*}
-\end{enumerate}
-
-Therefore $V$ is a vector space.
 \end{solution}
 
 
@@ -53,75 +23,26 @@ c \odot (x_1,y_1) &= (cx_1, c^2y_1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that the vector \textbf{addition} $\oplus$ is \textbf{associative}:
-      \((x_1,y_1) \oplus ((x_2,y_2) \oplus (x_3,y_3))=((x_1,y_1)\oplus (x_2,y_2))\oplus (x_3,y_3)\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+      \((x_1,y_1) \oplus ((x_2,y_2) \oplus (x_3,y_3))=((x_1,y_1)\oplus (x_2,y_2))\oplus (x_3,y_3)\) for all \((x_1,y_1), (x_2,y_2), (x_3,y_3) \in V\).
+\item Show that scalar multiplication does not distribute over scalar addition, i.e. for some scalars $a,b \in \IR$ and $(x_1,y_1) \in V$, \( (a+b) \odot x \neq a\odot x \oplus b \odot x\).
 \end{enumerate}
 \end{problem}
 
-\begin{problem}{V1}
-Let $V$ be the set of all points on the parabola $y=x^2$ with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
-\begin{align*}
-(x_1,y_1) \oplus (x_2,y_2) &= (x_1-x_2,y_1+y_2-2x_1x_2) \\
-c \odot (x_1,y_1) &= (cx_1, c^2y_1)
-\end{align*}
-\begin{enumerate}[(a)]
-\item Show that scalar multiplication \textbf{distributes scalars} over
-      vector addition:
-      \(c\odot((x_1,y_1) \oplus (x_2,y_2))=
-      c\odot(x_1,y_1) \oplus c\odot(x_2,y_2)\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
-\end{enumerate}
-\end{problem}
-\begin{solution}
-$$ c\odot((x_1,y_1) \oplus (x_2,y_2))= c \odot (x_1-x_2,y_1+y_2-2x_1x_2) = (c(x_1-x_2), c^2(y_1+y_2-2x_1x_2) ) $$
-$$ c\odot(x_1,y_1) \oplus c\odot(x_2,y_2) = (cx_1,c^2y_1) \oplus (cx_2,c^2y_2) = (cx_1-cx_2, c^2y_1+c^2y_2-2(cx_1)(cx_2) )$$
-
-Not a vector space as addition is not commutative.
-\end{solution}
 
 
 \begin{problem}{V1}
 Let $V$ be the set of all points on the line $x+y=2$ with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
 \begin{align*}
 (x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2-1,y_1+y_2-1) \\
-c \odot (x_1,y_1) &= (cx_1-(c-1), cy_1-(c-1))
+c \odot (x_1,y_1) &= (cx_1, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that this vector space has an \textbf{additive identity} element
-      \(\mathbf{0}\) satisfying \((x,y)\oplus\mathbf{0}=(x,y)\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+\item Show that this vector space has an \textbf{additive identity} element, i.e. an element
+      \(\mathbf{z} \in V\) satisfying \((x,y)\oplus\mathbf{z}=(x,y)\) for every \((x,y) \in V\).
+\item Show that scalar multiplication does not distribute over vector addition, i.e. for some \(a \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\), \(a \odot \left( (x_1,x_2)\oplus (y_1,y_2) \right) \neq a \odot (x_1,x_2) \oplus a \odot (y_1,y_2) \).
 \end{enumerate}
 \end{problem}
 \begin{solution}
-Let $(x_1,y_1) \in V$; then $(x_1,y_1) \oplus (1,1) = (x_1,y_1)$, so $(1,1)$ is an additive identity element.
-
-Now we will show the other seven properties.  Let $(x_1,y_1), (x_2,y_2) \in V$, and let $c,d \in \IR$.
-\begin{enumerate}[1)]
-\item Since real addition is associative, $\oplus$ is associative.
-\item Since real addition is commutative, $\oplus$ is commutative.
-\item The additive identity is $(1,1)$.
-\item $(x_1,y_1) \oplus (2-x_1,2-y_1) = (1,1)$, so $(2-x_1,2-y_1)$ is the additive inverse of $(x_1,y_1)$.
-\item \begin{align*} c\odot \left(d \odot (x_1,y_1) \right) &=c\odot \left( dx_1-(d-1),dy_1-(d-1)\right) \\
-&= \left( c\left(dx_1-(d-1) \right)-(c-1), c\left(dy_1-(d-1) \right) \right) \\
-&= \left(cdx_1-cd+c-(c-1), cdy_1-cd+c-(c-1) \right) \\
-&= \left(cdx_1-(cd-1), cdy_1-(cd-1) \right) \\
-&= (cd) \odot (x_1,y_1)
-\end{align*}
-\item $1 \odot (x_1,y_1) = (x_1-(1-1),y_1-(1-1)=(x_1,y_1)$
-\item \begin{align*} c \odot \left( (x_1,y_1)\oplus(x_2,y_2) \right) &=
-c\odot \left( x_1+y_1-1,x_2+y_2-1 \right) \\
-&= \left( c(x_1+y_1-1)-(c-1), c(x_2+y_2-1)-(c-1) \right) \\
-&= (cx_1+cx_2-2c+1, cy_1+cy_2-2c+1) \\
-&= \left(cx_1-(c-1),cy_1-(c-1) \right) \oplus (cx_2-(c-1),cy_2-(c-1)) \\
-&=c \odot (x_1,y_1) \oplus c\odot (x_2,y_2)
-\end{align*}
-\item \begin{align*} (c+d) \odot (x_1,y_1) &=
-\left( (c+d)x_1-(c+d-1), (c+d)y_1-(c+d-1) \right) \\
-&= \left( cx_1-(c-1), cy_1-(c-1) \right) \oplus (dx_1-(d-1), dy_1-(d-1) ) \\
-&= c\odot (x_1,y_1) \oplus c \odot (x_2,y_2)
-\end{align*}
-\end{enumerate}
-Therefore $V$ is a vector space.
 \end{solution}
 
 \begin{problem}{V1}
@@ -132,43 +53,34 @@ c \odot (x_1,y_1) &= (0, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that scalar multiplication
-      \textbf{distributes vectors} over scalar addition:
+      distributes over scalar addition, i.e. for every \(c,d \in \IR\) and \( (x,y) \in V\)
       \((c+d)\odot(x,y)=
       c\odot(x,y) \oplus d\odot(x,y)\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+\item Show that 1 is not a scalar multiplicative identity.
 \end{enumerate}
 \end{problem}
 \begin{solution}
-Let $(x_1,y_1) \in V$, and let $c,d \in \IR$.  Then
-$$(c+d)\odot (x_1,y_1)=(0, (c+d)y_1) = (0,cy_1) \oplus (0,dy_1) = c \odot (x_1,y_1) \oplus d \odot (x_1,y_1).$$
-However, $V$ is not a vector space, as $1 \odot (x_1,y_1) = (0,y_1) \neq (x_1,y_1)$.
 \end{solution}
 
 
 \begin{problem}{V1}
-Let $V$ be the set of all pairs of real numbers with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
+Let $V$ be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), $c \in \IR$,
 \begin{align*}
-(x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2,y_1+y_2) \\
-c \odot (x_1,y_1) &= (c^2x_1, c^3y_1)
+(x_1,x_2) \oplus (y_1,y_2) &= (x_1+y_1,x_2+y_2) \\
+c \odot (x_1,x_2) &= (c^2x_1, c^3x_2)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that scalar multiplication \textbf{distributes scalars} over
-      vector addition:
-      \(c\odot((x_1,y_1) \oplus (x_2,y_2))=
-      c\odot(x_1,y_1) \oplus c\odot(x_2,y_2)\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+\item Show that scalar multiplication distributes over
+      vector addition, i.e. for all \(c \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\)
+      \(c\odot((x_1,x_2) \oplus (y_1,y_2))=
+      c\odot(x_1,x_2) \oplus c\odot(y_1,y_2)\).
+\item Show that scalar multiplication does not distribute over
+      scalar addition, i.e. for some \(c,d \in \IR\) and \( (x_1,x_2)\in V\)
+      \((c+d)\odot(x_1,x_2)\neq c\odot(x_1,x_2) \oplus d\odot(x_1,x_2)\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
-Let $(x_1,y_1), (x_2,y_2) \in V$ and let $c \in \IR$.
-\begin{align*}
-c \odot \left( (x_1,y_1) \oplus (x_2,y_2) \right) &= c \odot (x_1+x_2,y_1+y_2) \\
-&= (c^2(x_1+x_2), c^3(y_1+y_2) ) \\
-&= (c^2x_1,c^3y_1) \oplus (c^2x_2,c^3y_2) \\
-&= c \odot (x_1,y_1) \oplus c \odot (x_2,y_2)
-\end{align*}
-However, $V$ is not a vector space, as the other distributive law fails:
-$$(c+d) \odot (x_1,y_1) = ( (c+d)^2 x_1, (c+d)^3 y_1) \neq ((c^2+d^2)x_1, (c^3+d^3)y_1) = c \odot (x_1,y_1) \oplus d \odot (x_1,y_1).$$
+
 \end{solution}
 
 
@@ -180,11 +92,11 @@ c \odot f &= c f^\prime
 \end{align*}
 (here $f^\prime$ denotes the derivative of $f$).
 \begin{enumerate}[(a)]
-\item Show that scalar multiplication \textbf{distributes scalars} over
-      vector addition:
+\item Show that scalar multiplication distributes over
+      vector addition, i.e. for all $c \in \IR$ and $f,g \in V$
       \(c\odot(f \oplus g)=
       c\odot f \oplus c\odot g\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+\item  Show that there is no additive identity element.
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -203,16 +115,11 @@ x \oplus y &= \sqrt{x^2+y^2} \\
 c \odot x &= c x
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that the vector \textbf{addition} $\oplus$ is \textbf{associative}:
+\item Show that the vector addition $\oplus$ is associative, i.e. for all $x,y,z \in V$,
       \(x \oplus (y \oplus z)=(x\oplus y)\oplus z\).
-\item Determine if $V$ is a vector space or not.  Justify your answer.
+\item  Show that there is no additive identity element.
 \end{enumerate}
 \end{problem}
 \begin{solution}
-Let $x,y,z \in \IR$.  Then
-\begin{align*}
-(x\oplus y) \oplus z &= \sqrt{x^2+y^2} \oplus z \\&= \sqrt{ (\sqrt{x^2+y^2})^2+z^2} \\&= \sqrt{x^2+y^2+z^2} \\
-&= \sqrt{x^2+(\sqrt{y^2+z^2})^2} \\ &= x \oplus \sqrt{y^2+z^2} \\ &= x \oplus (y \oplus z)
-\end{align*}
-However, this is not a vector space, as there is no zero vector.
+
 \end{solution}
