--- a/tex/modules/3-S/exercises/S6.tex
+++ b/tex/modules/3-S/exercises/S6.tex
@@ -1,4 +1,4 @@
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set of the system of equations
 \begin{align*}
 x+3y+3z+7w &= 0 \\
@@ -15,7 +15,7 @@ So a basis for the solution set is $$ \left\{ \begin{bmatrix} 3 \\ -1 \\ 0 \\ 0 
 \end{solution}
 
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set of the system of equations
 \begin{align*}
 x+2y+3z+w &= 0 \\
@@ -32,7 +32,7 @@ So a basis for the solution set is $\left\{\begin{bmatrix} 1 \\ 2 \\ -2 \\ 1\end
 \end{solution}
 
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set of the system of equations
 \begin{align*}
 x+2y+3z+w &= 0 \\
@@ -47,7 +47,7 @@ $$\left\{ \begin{bmatrix} -\frac{5}{7}a-\frac{3}{7}b \\ -\frac{8}{7}a-\frac{2}{7
 So a basis for the solution set is $\left\{\begin{bmatrix} -\frac{5}{7} \\ -\frac{8}{7} \\ 1 \\ 0\end{bmatrix}, \begin{bmatrix} - \frac{3}{7} \\ -\frac{2}{7} \\ 0 \\ 1 \end{bmatrix} \right\}$, or $\left\{\begin{bmatrix} 5 \\ 8 \\ -7 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 2 \\ 0 \\ -7 \end{bmatrix}\right\}$.
 \end{solution}
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set to the system of equations
 \begin{align*}
 x+2y-3z &= 0 \\
@@ -63,7 +63,7 @@ $$\left\{ \begin{bmatrix} \frac{5}{3}a \\ \frac{2}{3}a \\ a \end{bmatrix} \bigg|
 So a basis is $\left\{ \begin{bmatrix} \frac{5}{3} \\ \frac{2}{3} \\ 1 \end{bmatrix} \right\}$ or $\left\{ \begin{bmatrix} 5 \\  2 \\ 3 \end{bmatrix} \right\}$.
 \end{solution}
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set to the homogeneous system of equations
 \begin{align*}
 2x_1+3x_2-5x_3+14x_4 &= 0\\
@@ -98,7 +98,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \right\}\).
 \end{solution}
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set to the homogeneous system of equations
 \begin{align*}
 4x_1+4x_2+3x_3-6x_4 &= 0 \\
@@ -136,7 +136,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \right\}\).
 \end{solution}
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set to the homogeneous system of equations
 given by
 \begin{align*}
@@ -165,7 +165,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \right\}\).
 \end{solution}
 
-\begin{problem}{E4}
+\begin{problem}{S6}
 Find a basis for the solution set to the homogeneous system of equations
 given by
 \begin{align*}
