--- a/tex/modules/1-E/exercises/E2.tex
+++ b/tex/modules/1-E/exercises/E2.tex
@@ -103,7 +103,7 @@ Put the following matrix in reduced row echelon form.
 \begin{problem}{E2}
 Put the following matrix in reduced row echelon form.
 \[
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
     -3 & 1 & 0 & 2 \\
     -8 & 2 & -1 & 6 \\
     0 & 2 & 3 & -2
@@ -112,17 +112,17 @@ Put the following matrix in reduced row echelon form.
 \end{problem}
 \begin{solution}
 \[
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
   -3 & 1 & 0 & 2 \\
    -8 & 2 & -1 & 6 \\
    0 & 2 & 3 & -2
   \end{bmatrix} \sim
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
   1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
    -8 & 2 & -1 & 6 \\
    0 & 2 & 3 & -2
   \end{bmatrix} \sim
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
   1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
    0 & -\frac{2}{3} & -1 & \frac{2}{3} \\
    0 & 2 & 3 & -2
@@ -130,12 +130,12 @@ Put the following matrix in reduced row echelon form.
 \]
 \[
   \sim
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
   1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
    0 & 1 & \frac{3}{2} & -1 \\
    0 & 2 & 3 & -2
   \end{bmatrix} \sim
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
   1 & 0 & \frac{1}{2} & -1 \\
    0 & 1 & \frac{3}{2} & -1 \\
    0 & 0 & 0 & 0
@@ -146,7 +146,7 @@ Put the following matrix in reduced row echelon form.
 \begin{problem}{E2}
 Find the reduced row echelon form of the matrix below.
 \[
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
     2 & 1 & -1 & 0 & 5 \\
     3 & -1 & 0 & -2 & 0 \\
     -1 & 0 & 5 & 0 & -1
@@ -155,17 +155,17 @@ Find the reduced row echelon form of the matrix below.
 \end{problem}
 \begin{solution}
 \[
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    2 & 1 & -1 & 0 & 5 \\
    3 & -1 & 0 & -2 & 0 \\
    -1 & 0 & 5 & 0 & -1
   \end{bmatrix} \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    -1 & 0 & 5 & 0 & -1  \\
    2 & 1 & -1 & 0 & 5 \\
    3 & -1 & 0 & -2 & 0
   \end{bmatrix} \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    1 & 0 & -5 & 0 & 1 \\
    2 & 1 & -1 & 0 & 5 \\
    3 & -1 & 0 & -2 & 0
@@ -173,22 +173,22 @@ Find the reduced row echelon form of the matrix below.
 \]
 \[
   \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    1 & 0 & -5 & 0 & 1  \\
    0 & 1 & 9 & 0 & 3 \\
    0 & -1 & 15 & -2 & -3 \\
   \end{bmatrix} \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    1 & 0 & -5 & 0 & 1  \\
    0 & 1 & 9 & 0 & 3 \\
    0 & 0 & 24 & -2 & 0 \\
   \end{bmatrix} \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
    1 & 0 & -5 & 0 & 1 \\
    0 & 1 & 9 & 0 & 3 \\
    0 & 0 & 1 & -\frac{1}{12} & 0 \\
   \end{bmatrix} \sim
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
   1 & 0 & 0 & -\frac{5}{12} & 1 \\
    0 & 1 & 0 & \frac{3}{4} & 3 \\
    0 & 0 & 1 & -\frac{1}{12} & 0
@@ -200,7 +200,7 @@ Find the reduced row echelon form of the matrix below.
 Find \(\RREF A\), where
 \[
   A =
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
     3 & -2 & 1 & 8 & -5 \\
     2 & 2 & 0 & 6 & -2 \\
     -1 & 1 & 1 & -4 & 6
@@ -210,7 +210,7 @@ Find \(\RREF A\), where
 \begin{solution}
 \[
   \RREF A =
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
     1 & 0 & 0 & 3 & -2 \\
     0 & 1 & 0 & 0 & 1 \\
     0 & 0 & 1 & -1 & 3
@@ -222,7 +222,7 @@ Find \(\RREF A\), where
 Find \(\RREF A\), where
 \[
   A =
-  \begin{bmatrix}[cc|c]
+  \begin{bmatrix}
     2 & -7 & 4 \\
     1 & -3 & 2 \\
     3 & 0 & 3
@@ -232,7 +232,7 @@ Find \(\RREF A\), where
 \begin{solution}
 \[
   \RREF A =
-  \begin{bmatrix}[cc|c]
+  \begin{bmatrix}
     1 & 0 & 0 \\
     0 & 1 & 0 \\
     0 & 0 & 1
@@ -244,7 +244,7 @@ Find \(\RREF A\), where
 Find \(\RREF A\), where
 \[
   A =
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
     2 & -1 & 5 & 4 \\
     -1 & 0 & -2 & -1 \\
     1 & 3 & -1 & -5
@@ -254,7 +254,7 @@ Find \(\RREF A\), where
 \begin{solution}
 \[
   \RREF A =
-  \begin{bmatrix}[ccc|c]
+  \begin{bmatrix}
     1 & 0 & 2 & 1 \\
     0 & 1 & -1 & -2 \\
     0 & 0 & 0 & 0
@@ -266,7 +266,7 @@ Find \(\RREF A\), where
 Find \(\RREF A\), where
 \[
   A =
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
     2 & 2 & 1 & 2 & -1 \\
     1 & 1 & 2 & 4 & 5 \\
     3 & 3 & -1 & -2 & 1
@@ -276,7 +276,7 @@ Find \(\RREF A\), where
 \begin{solution}
 \[
   \RREF A =
-  \begin{bmatrix}[cccc|c]
+  \begin{bmatrix}
     1 & 1 & 0 & 0 & 0 \\
     0 & 0 & 1 & 2 & 0 \\
     0 & 0 & 0 & 0 & 1
