use \vec not \vect

--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -9,53 +9,53 @@
 \begin{activity}{20}\smallSlideText
 Consider each of the following vector properties. Label each property
 with \(\IR^1\), \(\IR^2\), and/or \(\IR^3\) if that property holds for
-Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
+Euclidean vectors/scalars \(\vec u,\vec v,\vec w\) of that dimension.
 \begin{multicols}{2}
 \begin{enumerate}
   \item \textbf{Addition associativity.}
 
-        \(\vect u+(\vect v+\vect w)=
-        (\vect u+\vect v)+\vect w\).
+        \(\vec u+(\vec v+\vec w)=
+        (\vec u+\vec v)+\vec w\).
   \item \textbf{Addition commutivity.}
 
-        \(\vect u+\vect v=
-        \vect v+\vect u\).
+        \(\vec u+\vec v=
+        \vec v+\vec u\).
   \item \textbf{Addition identity.}
 
-        There exists some \(\vect z\)
-        where \(\vect v+\vect z=\vect v\).
+        There exists some \(\vec z\)
+        where \(\vec v+\vec z=\vec v\).
   \item \textbf{Addition inverse.}
 
-        There exists some \(-\vect v\)
-        where \(\vect v+(-\vect v)=\vect z\).
+        There exists some \(-\vec v\)
+        where \(\vec v+(-\vec v)=\vec z\).
   \item \textbf{Addition midpoint uniqueness.}
 
-        There exists a unique \(\vect m\) where the distance from
-        \(\vect u\) to \(\vect m\) equals the distance from \(\vect m\)
-        to \(\vect v\).
+        There exists a unique \(\vec m\) where the distance from
+        \(\vec u\) to \(\vec m\) equals the distance from \(\vec m\)
+        to \(\vec v\).
   \item \textbf{Scalar multiplication associativity.}
 
-        \(a(b\vect v)=(ab)\vect v\).
+        \(a(b\vec v)=(ab)\vec v\).
   \item \textbf{Scalar multiplication identity.}
 
-        \(1\vect v=\vect v\).
+        \(1\vec v=\vec v\).
   \item \textbf{Scalar multiplication relativity.}
 
-        There exists some scalar \(c\) where either \(c\vect v=\vect w\)
-        or \(c\vect w=\vect v\).
+        There exists some scalar \(c\) where either \(c\vec v=\vec w\)
+        or \(c\vec w=\vec v\).
   \item \textbf{Scalar distribution.}
 
-        \(a(\vect u+\vect v)=a\vect u+a\vect v\).
+        \(a(\vec u+\vec v)=a\vec u+a\vec v\).
   \item \textbf{Vector distribution.}
 
-        \((a+b)\vect v=a\vect v+b\vect v\).
+        \((a+b)\vec v=a\vec v+b\vec v\).
   \item \textbf{Orthogonality.}
 
-        There exists a non-zero vector \(\vect n\) such that
-        \(\vect n\) is orthogonal to both \(\vect u\) and \(\vect v\).
+        There exists a non-zero vector \(\vec n\) such that
+        \(\vec n\) is orthogonal to both \(\vec u\) and \(\vec v\).
   \item \textbf{Bidimensionality.}
 
-        \(\vect v=a\vect i+b\vect j\) for some value of \(a,b\).
+        \(\vec v=a\vec i+b\vec j\) for some value of \(a,b\).
 \end{enumerate}
 \end{multicols}
 \end{activity}
@@ -63,7 +63,7 @@ Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
 \begin{definition}
   A \term{vector space} \(V\) is any collection of mathematical objects with
   associated addition and scalar multiplication operations that satisfy
-  the following properties. Let \(\vect u,\vect v,\vect w\) belong to \(V\),
+  the following properties. Let \(\vec u,\vec v,\vec w\) belong to \(V\),
   and let \(a,b\) be scalar numbers.
 
   \vectorSpaceProperties
