latex math delimiters in V1, correct errors, comment out TODO exercises

--- a/tex/modules/2-V/exercises/V1.tex
+++ b/tex/modules/2-V/exercises/V1.tex
@@ -1,37 +1,34 @@
 \begin{problem}{V1}
-Let $V$ be the  set of all real numbers together with the operations $\oplus$ and $\odot$ defined by, for any $x,y \in V$ and $c \in \IR$,
+Let \(V\) be the  set of all real numbers together with the operations \(\oplus\) and \(\odot\) defined by, for any \(x,y\in V\) and \(c\in \IR\),
 \begin{align*}
 x\oplus y  &= x+y \\
 c \odot x &= cx-3(c-1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that \textbf{scalar multiplication} is
-      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\) for all scalars $a,b \in \IR$ and $x \in V$.
-\item Show that scalar multiplication does not distribute over vector addition, i.e. for some scalar $a \in \IR$ and $x,y \in V$, $a \odot (x \oplus y) \neq a \odot x \oplus a \odot y$.
+      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\) for all scalars \(a,b \in \IR\) and \(x \in V\).
+\item Show that scalar multiplication does not distribute over vector addition, i.e. for some scalar \(a \in \IR\) and \(x,y\in V\), \(a \odot (x \oplus y) \neq a \odot x \oplus a \odot y\).
 \end{enumerate}
 \end{problem}
 
-\begin{solution}
-\end{solution}
-
 
 \begin{problem}{V1}
-Let $V$ be the set of all points on the parabola $y=x^2$ with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
+Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,y_1), (x_2,y_2) \in V\), \(c\in \IR\),
 \begin{align*}
 (x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2,y_1+y_2+2x_1x_2) \\
-c \odot (x_1,y_1) &= (cx_1, c^2y_1)
+c \odot (x_1,y_1) &= (cx_1, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that the vector \textbf{addition} $\oplus$ is \textbf{associative}:
+\item Show that the vector \textbf{addition} \(\oplus\) is \textbf{associative}:
       \((x_1,y_1) \oplus ((x_2,y_2) \oplus (x_3,y_3))=((x_1,y_1)\oplus (x_2,y_2))\oplus (x_3,y_3)\) for all \((x_1,y_1), (x_2,y_2), (x_3,y_3) \in V\).
-\item Show that scalar multiplication does not distribute over scalar addition, i.e. for some scalars $a,b \in \IR$ and $(x_1,y_1) \in V$, \( (a+b) \odot x \neq a\odot x \oplus b \odot x\).
+\item Show that scalar multiplication does not distribute over scalar addition, i.e. for some scalars \(a,b \in \IR\) and \((x_1,y_1) \in V\), \( (a+b) \odot x \neq a\odot x \oplus b \odot x\).
 \end{enumerate}
 \end{problem}
 
 
 
 \begin{problem}{V1}
-Let $V$ be the set of all points on the line $x+y=2$ with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
+Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,y_1), (x_2,y_2) \in V\), \(c\in \IR\),
 \begin{align*}
 (x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2-1,y_1+y_2-1) \\
 c \odot (x_1,y_1) &= (cx_1, cy_1)
@@ -42,18 +39,16 @@ c \odot (x_1,y_1) &= (cx_1, cy_1)
 \item Show that scalar multiplication does not distribute over vector addition, i.e. for some \(a \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\), \(a \odot \left( (x_1,x_2)\oplus (y_1,y_2) \right) \neq a \odot (x_1,x_2) \oplus a \odot (y_1,y_2) \).
 \end{enumerate}
 \end{problem}
-\begin{solution}
-\end{solution}
 
 \begin{problem}{V1}
-Let $V$ be the set of all pairs of real numbers with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
+Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,y_1), (x_2,y_2) \in V\), \(c\in \IR\),
 \begin{align*}
 (x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2,y_1+y_2) \\
 c \odot (x_1,y_1) &= (0, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that scalar multiplication
-      distributes over scalar addition, i.e. for every \(c,d \in \IR\) and \( (x,y) \in V\)
+      distributes over scalar addition, i.e. for every \(c,d \in \IR\) and \( (x,y) \in V\),
       \((c+d)\odot(x,y)=
       c\odot(x,y) \oplus d\odot(x,y)\).
 \item Show that 1 is not a scalar multiplicative identity.
@@ -63,63 +58,63 @@ c \odot (x_1,y_1) &= (0, cy_1)
 \end{solution}
 
 
-\begin{problem}{V1}
-Let $V$ be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), $c \in \IR$,
-\begin{align*}
-(x_1,x_2) \oplus (y_1,y_2) &= (x_1+y_1,x_2+y_2) \\
-c \odot (x_1,x_2) &= (c^2x_1, c^3x_2)
-\end{align*}
-\begin{enumerate}[(a)]
-\item Show that scalar multiplication distributes over
-      vector addition, i.e. for all \(c \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\)
-      \(c\odot((x_1,x_2) \oplus (y_1,y_2))=
-      c\odot(x_1,x_2) \oplus c\odot(y_1,y_2)\).
-\item Show that scalar multiplication does not distribute over
-      scalar addition, i.e. for some \(c,d \in \IR\) and \( (x_1,x_2)\in V\)
-      \((c+d)\odot(x_1,x_2)\neq c\odot(x_1,x_2) \oplus d\odot(x_1,x_2)\).
-\end{enumerate}
-\end{problem}
-\begin{solution}
-
-\end{solution}
-
-
-\begin{problem}{V1}
-Let $V$ be the set of all polynomials with the operations, for any $f, g \in V$, $c \in \IR$,
-\begin{align*}
-f \oplus g &= f^\prime + g^\prime \\
-c \odot f &= c f^\prime
-\end{align*}
-(here $f^\prime$ denotes the derivative of $f$).
-\begin{enumerate}[(a)]
-\item Show that scalar multiplication distributes over
-      vector addition, i.e. for all $c \in \IR$ and $f,g \in V$
-      \(c\odot(f \oplus g)=
-      c\odot f \oplus c\odot g\).
-\item  Show that there is no additive identity element.
-\end{enumerate}
-\end{problem}
-\begin{solution}
-Let $f,g \in \mathcal{P}$, and let $c \in \IR$.
-$$c \odot (f \oplus g) = c \odot (f^\prime+g^\prime) =
-c(f^\prime+g^\prime)^\prime = cf^{\prime\ \prime}+cg^{\prime\ \prime} =
-cf^\prime\oplus cg^\prime= c \odot f \oplus c \odot g.$$
-However, this is not a vector space, as there is no zero vector.  Additionally, $1 \odot f \neq f$ for any nonzero polynomial $f$.
-\end{solution}
-
-
-\begin{problem}{V1}
-Let $V$ be the set of all real numbers with the operations, for any $x, y \in V$, $c \in \IR$,
-\begin{align*}
-x \oplus y &= \sqrt{x^2+y^2} \\
-c \odot x &= c x
-\end{align*}
-\begin{enumerate}[(a)]
-\item Show that the vector addition $\oplus$ is associative, i.e. for all $x,y,z \in V$,
-      \(x \oplus (y \oplus z)=(x\oplus y)\oplus z\).
-\item  Show that there is no additive identity element.
-\end{enumerate}
-\end{problem}
-\begin{solution}
-
-\end{solution}
+% \begin{problem}{V1}
+% Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), \(c\in \IR\),
+% \begin{align*}
+% (x_1,x_2) \oplus (y_1,y_2) &= (x_1+y_1,x_2+y_2) \\
+% c \odot (x_1,x_2) &= (c^2x_1, c^3x_2)
+% \end{align*}
+% \begin{enumerate}[(a)]
+% \item Show that scalar multiplication distributes over
+%       vector addition, i.e. for all \(c \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\)
+%       \(c\odot((x_1,x_2) \oplus (y_1,y_2))=
+%       c\odot(x_1,x_2) \oplus c\odot(y_1,y_2)\).
+% \item Show that scalar multiplication does not distribute over
+%       scalar addition, i.e. for some \(c,d \in \IR\) and \( (x_1,x_2)\in V\)
+%       \((c+d)\odot(x_1,x_2)\neq c\odot(x_1,x_2) \oplus d\odot(x_1,x_2)\).
+% \end{enumerate}
+% \end{problem}
+% \begin{solution}
+%
+% \end{solution}
+%
+%
+% \begin{problem}{V1}
+% Let \(V\) be the set of all polynomials with the operations, for any \(f,g\in V\), \(c\in \IR\),
+% \begin{align*}
+% f \oplus g &= f^\prime + g^\prime \\
+% c \odot f &= c f^\prime
+% \end{align*}
+% (here \(f^\prime\) denotes the derivative of \(f\)).
+% \begin{enumerate}[(a)]
+% \item Show that scalar multiplication distributes over
+%       vector addition, i.e. for all \(c\in \IR\) and \(f,g \in V\)
+%       \(c\odot(f \oplus g)=
+%       c\odot f \oplus c\odot g\).
+% \item  Show that there is no additive identity element.
+% \end{enumerate}
+% \end{problem}
+% \begin{solution}
+% Let \(f,g \in \mathcal{P}\), and let \(c\in \IR\).
+% \[c \odot (f \oplus g) = c \odot (f^\prime+g^\prime) =
+% c(f^\prime+g^\prime)^\prime = cf^{\prime\ \prime}+cg^{\prime\ \prime} =
+% cf^\prime\oplus cg^\prime= c \odot f \oplus c \odot g.\]
+% However, this is not a vector space, as there is no zero vector.  Additionally, \(1 \odot f \neq f\) for any nonzero polynomial \(f\).
+% \end{solution}
+%
+%
+% \begin{problem}{V1}
+% Let \(V\) be the set of all real numbers with the operations, for any \(x,y\in V\), \(c\in \IR\),
+% \begin{align*}
+% x \oplus y &= \sqrt{x^2+y^2} \\
+% c \odot x &= c x
+% \end{align*}
+% \begin{enumerate}[(a)]
+% \item Show that the vector addition \(\oplus\) is associative, i.e. for all \(x,y,z \in V\),
+%       \(x \oplus (y \oplus z)=(x\oplus y)\oplus z\).
+% \item  Show that there is no additive identity element.
+% \end{enumerate}
+% \end{problem}
+% \begin{solution}
+%
+% \end{solution}
