--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -5,10 +5,10 @@
   Last time, we defined a \textbf{vector space} \(V\) to be any collection of
   mathematical objects with
   associated addition and scalar multiplication operations that satisfy
-  the following eight properties for all \(\vect u,\vect v,\vect w\) in \(V\),
+  the following eight properties for all \(\vec u,\vec v,\vec w\) in \(V\),
   and all scalars (i.e. real numbers) \(a,b\).
 
-  \vectorSpaceProperties
+  \vecorSpaceProperties
 \end{remark}
 
 \begin{remark}
@@ -35,15 +35,15 @@
   \]
   \begin{subactivity}
   Show that $V$ satisfies the vector distributive property
-  \[(a+b)\odot\vect v=(a\odot\vect v)\oplus (b\odot\vect v)\]
+  \[(a+b)\odot\vec v=(a\odot\vec v)\oplus (b\odot\vec v)\]
   by letting \(\vec v=(x,y)\) and showing both sides simplify to the same
   expression.
   \end{subactivity}
   \begin{subactivity}%optional
   Show that $V$ contains an additive identity element by choosing
-  \(\vect{z}=(\unknown,\unknown)\) such that
-  \(\vect{v}\oplus\vect{z}=(x,y)\oplus(\unknown,\unknown)=\vect{v}\)
-  for any \(\vect{v}=(x,y)\in V\).
+  \(\vec{z}=(\unknown,\unknown)\) such that
+  \(\vec{v}\oplus\vec{z}=(x,y)\oplus(\unknown,\unknown)=\vec{v}\)
+  for any \(\vec{v}=(x,y)\in V\).
   \end{subactivity}
 \end{activity}
 
@@ -60,33 +60,33 @@
     \begin{itemize}
       \item \textbf{Addition associativity.}
 
-            \(\vect u\oplus(\vect v\oplus\vect w)=
-            (\vect u\oplus\vect v)\oplus\vect w\).
+            \(\vec u\oplus(\vec v\oplus\vec w)=
+            (\vec u\oplus\vec v)\oplus\vec w\).
       \item \textbf{Addition commutivity.}
 
-            \(\vect u\oplus\vect v=
-            \vect v\oplus\vect u\).
+            \(\vec u\oplus\vec v=
+            \vec v\oplus\vec u\).
       \item \textbf{Addition identity.}
 
-            There exists some \(\vect z\)
-            where \(\vect v\oplus\vect z=\vect v\).
+            There exists some \(\vec z\)
+            where \(\vec v\oplus\vec z=\vec v\).
       \item \textbf{Addition inverse.}
 
-            There exists some \(-\vect v\)
-            where \(\vect v\oplus(-\vect v)=\vect z\).
+            There exists some \(-\vec v\)
+            where \(\vec v\oplus(-\vec v)=\vec z\).
       \item \textbf{Scalar multiplication associativity.}
 
-            \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
+            \(a\odot(b\odot\vec v)=(ab)\odot\vec v\).
       \item \textbf{Scalar multiplication identity.}
 
-            \(1\odot\vect v=\vect v\).
+            \(1\odot\vec v=\vec v\).
       \item \textbf{Scalar distribution.}
 
-            \(a\odot(\vect u\oplus\vect v)=
-            (a\odot\vect u)\oplus (a\odot\vect v)\).
+            \(a\odot(\vec u\oplus\vec v)=
+            (a\odot\vec u)\oplus (a\odot\vec v)\).
       \item \textbf{Vector distribution.}
 
-            \((a+b)\odot\vect v=(a\odot\vect v)\oplus (b\odot\vect v)\).
+            \((a+b)\odot\vec v=(a\odot\vec v)\oplus (b\odot\vec v)\).
     \end{itemize}
     \end{multicols}
 	Thus, \(V\) is a vector space.
@@ -122,8 +122,8 @@
 
 \begin{definition}
   A \term{linear combination} of a set of vectors
-  \(\{\vect v_1,\vect v_2,\dots,\vect v_m\}\) is given by
-  \(c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m\) for any choice of
+  \(\{\vec v_1,\vec v_2,\dots,\vec v_m\}\) is given by
+  \(c_1\vec v_1+c_2\vec v_2+\dots+c_m\vec v_m\) for any choice of
   scalar multiples \(c_1,c_2,\dots,c_m\).
 
 	\vspace{2em}
@@ -135,8 +135,8 @@
   The \term{span} of a set of vectors is the collection of all linear
   combinations of that set:
   \[
-    \vspan\{\vect v_1,\vect v_2,\dots,\vect v_m\} =
-    \setBuilder{c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m}{
+    \vspan\{\vec v_1,\vec v_2,\dots,\vec v_m\} =
+    \setBuilder{c_1\vec v_1+c_2\vec v_2+\dots+c_m\vec v_m}{
     c_i\in\IR}.
   \]
 
