--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -3,8 +3,8 @@
 
 
 
-\newcommand{\vect}{\mathbf}
-\renewcommand{\vec}{\vect} %SC used \vect while DL used \vec
+\renewcommand{\vec}{\mathbf}
+\renewcommand{\vect}{\vec} %SC used \vect while DL used \vec
 
 \newcommand{\circledNumber}[1]{ % https://tex.stackexchange.com/a/7045
 \tikz[baseline=(char.base)]{
@@ -32,7 +32,7 @@
 \newcounter{ActivityCounter}
 \newcounter{SubactivityCounter}
 
-%This code allows for augmented matrices, e.g. by \begin{bmatrix}{cc|c} ...
+%This code allows for augmented matrices, e.g. by \begin{bmatrix}[cc|c] ...
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
   \hskip -\arraycolsep
