bugfixes and build

--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -8,7 +8,7 @@
   the following eight properties for all \(\vec u,\vec v,\vec w\) in \(V\),
   and all scalars (i.e. real numbers) \(a,b\).
 
-  \vecorSpaceProperties
+  \vectorSpaceProperties
 \end{remark}
 
 \begin{remark}
