--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -4,7 +4,7 @@
 
 
 \renewcommand{\vec}{\mathbf}
-\renewcommand{\vect}{\vec} %SC used \vect while DL used \vec
+\newcommand{\vect}{\vec} %SC used \vect while DL used \vec
 
 \newcommand{\circledNumber}[1]{ % https://tex.stackexchange.com/a/7045
 \tikz[baseline=(char.base)]{
